cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_59.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:58: error: DEAD_STORE
  The value written to &t (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ofb64enc.c:58:5: Write of unused value
56.           l2c(v1, iv);
57.       }
58.       t = v0 = v1 = ti[0] = ti[1] = 0;
          ^
59.       *num = n;
60.   }
